# RLT_task

./: .env  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: action.yml
aggregation/: aggregator.py
bot/: main.py  query_handler.py
